[gd_scene load_steps=6 format=2]

[ext_resource path="res://Breakable.gd" type="Script" id=1]
[ext_resource path="res://broken_breakable.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.3
bottom_radius = 0.8
height = 3.0

[sub_resource type="CylinderMesh" id=2]
top_radius = 1.5
bottom_radius = 1.5
height = 0.5
radial_segments = 32

[sub_resource type="CylinderShape" id=3]
radius = 1.53465
height = 3.30452

[node name="Breakable_Stool" type="Spatial"]

[node name="Breakable" type="StaticBody" parent="."]
script = ExtResource( 1 )
destroyed_breakable = ExtResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Breakable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0114983, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Breakable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3814, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Collision_Shape" type="CollisionShape" parent="Breakable"]
shape = SubResource( 3 )

[node name="Broken_Breakable_Holder" type="Spatial" parent="."]

[node name="Loot_Holder" type="Spatial" parent="."]

[node name="Loot_Holder2" type="Spatial" parent="."]

[node name="Loot_Holder3" type="Spatial" parent="."]

[node name="Loot_Holder4" type="Spatial" parent="."]

[node name="Loot_Holder5" type="Spatial" parent="."]

[node name="Loot_Holder6" type="Spatial" parent="."]

[node name="Loot_Holder7" type="Spatial" parent="."]

[node name="Loot_Holder8" type="Spatial" parent="."]

